# MLRF

./: Makefile  README.md  setup.cfg  setup.py
mlrf/: __init__.py
mlrf/cifar_utils/: __init__.py  cifar_utils.py
mlrf/feature_extraction/: BoVWFE.py  FeatureExtractor.py  FlattenFE.py  HoGFE.py  __init__.py
mlrf/models/: BaseModel.py  KMeansModel.py  LogisticRegressionModel.py  SVCModel.py  __init__.py
mlrf_cookiecutter/: Makefile  README.md  pyproject.toml
mlrf_cookiecutter/mlrf/: __init__.py  bovw.py  cifar_utils.py  dataset.py  find_cifar.py  models.py  testons.py  try.ipynb
mlrf_cookiecutter/mlrf/data/: dataset.py
mlrf_cookiecutter/mlrf/features/: bovw.py  flatten.py  hog.py
mlrf_cookiecutter/mlrf/models/: KMeansModel.py  SVCModel.py
mlrf_cookiecutter/notebooks/: tuto.ipynb
notebooks/: try.ipynb  tutorial.ipynb
scripts/: bovw_kmeans.py  bovw_logreg.py  bovw_svc.py  flatten_kmeans.py  flatten_logreg.py  flatten_svc.py  hog_kmeans.py  hog_logreg.py  hog_svc.py
