[metadata]
name = mlrf
version = 1.0.0
author = 
    Tristan DUJARDIN
    Matheo RIBOUR
author_email = 
    tristan.dujardin@epita.fr
    matheo.ribour@epita.fr
description = CIFAR-10 classification library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MRIBOUR/MLRF
license = MIT

[options]
packages = find:
install_requires =
    numpy<2.0.0
    scikit-learn
    scikit-image
    opencv-python
    matplotlib

[options.packages.find]
where = mlrf

[options.extras_require]
dev =
    flake8
    mypy

[flake8]
ignore = E731,E266,E501,C901,W503
max-line-length = 99
exclude = .git,notebooks,references,models,data